...
                        .fillMaxWidth()
                        .height(150.dp)
                        .testTag("StudentButton"),
                    shape = RoundedCornerShape(30.dp),
                    colors = ButtonDefaults.buttonColors(backgroundColor = MaterialTheme.colors.secondary),
...
                        .fillMaxWidth()
                        .height(150.dp)
                        .testTag("StandardButton"),
                    shape = RoundedCornerShape(30.dp),
                    colors = ButtonDefaults.buttonColors(backgroundColor = MaterialTheme.colors.primary),
...
                    TextField(
                        value = email,
                        label = { Text(text = "E-Mail", color = MaterialTheme.colors.secondary) },
                        onValueChange = { email = it },
                        singleLine = true,
...
                            .height(height = 60.dp)
                            .fillMaxWidth()
                            .testTag("UserEmail"),
                        colors = TextFieldDefaults.textFieldColors(
                            backgroundColor = MaterialTheme.colors.primary
...
                                    .fillMaxWidth()
                                    .height(height = 60.dp)
                                    .testTag("UserPassword"),
                                colors = TextFieldDefaults.textFieldColors(
                                    backgroundColor = MaterialTheme.colors.primary
...
                                    .fillMaxWidth()
                                    .height(height = 60.dp)
                                    .testTag("UserPasswordRepeat"),
                                colors = TextFieldDefaults.textFieldColors(
                                    backgroundColor = MaterialTheme.colors.primary
...
                        .fillMaxWidth()
                        .height(height = 60.dp)
                        .testTag("RegistrationScreenTwoButton"),
                    colors = ButtonDefaults.buttonColors(
                        backgroundColor = MaterialTheme.colors.secondary),
...
                        modifier = Modifier
                            .padding(16.dp),
                        text = "Enter Address Data",
                        fontWeight = Bold,
                        textAlign = TextAlign.Center,
...
                        .height(height = 60.dp)
                        .fillMaxWidth()
                        .testTag("RootPoint"),
                    colors = TextFieldDefaults.textFieldColors(
                        backgroundColor = MaterialTheme.colors.primary
...
                        .height(height = 60.dp)
                        .fillMaxWidth()
                        .testTag("Lines"),
                    colors = TextFieldDefaults.textFieldColors(
                        backgroundColor = MaterialTheme.colors.primary
...
                TextField(
                    value = preferredDestination,
                    label = { Text(text = "Destination", color = MaterialTheme.colors.secondary) },
                    onValueChange = { preferredDestination = it },
                    singleLine = true,
...
                          if (notEmpty()) {
                              if(StudentMode) {
                                  preferences.edit().putString(GlobalVarHolder.TYPE, "Student").apply()
                              } else {
                                  preferences.edit().putString(GlobalVarHolder.TYPE, "Normal").apply()
...
                        .fillMaxWidth()
                        .height(height = 60.dp)
                        .testTag("RegistrationFinishButton"),
                    colors = ButtonDefaults.buttonColors(backgroundColor = MaterialTheme.colors.secondary),
                ) {
...
