package at.fh.mappdev.rootnavigator

object NotificationInfo {
    const val NOTIFICATIONID = "ReminderId"
    const val NOTIFICATIONNAME = "Reminder"
    const val ALARMID = "AlarmId"
    const val ALARMNAME = "Alarm"
    var NOTIFICATIONPERMISSION = false
}